--- a/restaurante_la_orden/tsconfig.json
+++ b/restaurante_la_orden/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "typeRoots": ["node_modules/@types", "src/types"],
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
