--- a/restaurante_la_orden/tsconfig.app.json
+++ b/restaurante_la_orden/tsconfig.app.json
@@ -3,6 +3,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "typeRoots": [
+      "node_modules/@types",
+      "src/typings"
+    ],
     "outDir": "./out-tsc/app",
     "types": []
   },
