se realiza cambios en menu y plato

--- a/menu_restaurante_backend/requirements.txt
+++ b/menu_restaurante_backend/requirements.txt
@@ -5,5 +5,5 @@ mysqlclient==2.2.7
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
-
+python -m pip install Pillow
 ### intalcion pip install -r  requirements.txt
